Fixed missing margin in about section

--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -6,6 +6,7 @@
 .text {
     font-size: 1.6rem;
     letter-spacing: 0.5px;
+    margin-bottom: 3rem;
 }
 
 .skillItem {
